--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
 	"require": {
 		"php": ">=8.0.0",
 		"typo3/cms-core": ">=12.4 <14",
-		"quellenform/t3x-iconpack": ">=1.0.0 ^1.2.0"
+		"quellenform/t3x-iconpack": ">=1.2.0 <2.0"
 	},
 	"replace": {
 		"typo3-ter/iconpack-flagicons": "self.version"
